--- a/ZarnasBookStore/ZarnasBookStore.csproj
+++ b/ZarnasBookStore/ZarnasBookStore.csproj
@@ -10,9 +10,15 @@
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.32" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.32" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.32" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.32" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.32" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.32" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.32" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ZarnasBooks.DataAccess\ZarnasBooks.DataAccess.csproj" />
+    <ProjectReference Include="..\ZarnasBooks.Models\ZarnasBooks.Models.csproj" />
   </ItemGroup>
 
 </Project>
