--- a/ZarnasBooks.DataAccess/ZarnasBooks.DataAccess.csproj
+++ b/ZarnasBooks.DataAccess/ZarnasBooks.DataAccess.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -8,6 +8,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.32" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.32" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.32" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ZarnasBooks.Models\ZarnasBooks.Models.csproj" />
+    <ProjectReference Include="..\ZarnasBooks.Utility\ZarnasBooks.Utility.csproj" />
   </ItemGroup>
 
 </Project>
