--- a/ZarnasBookStore/ZarnasBookStore.csproj
+++ b/ZarnasBookStore/ZarnasBookStore.csproj
@@ -20,10 +20,11 @@
   <ItemGroup>
     <ProjectReference Include="..\ZarnasBooks.DataAccess\ZarnasBooks.DataAccess.csproj" />
     <ProjectReference Include="..\ZarnasBooks.Models\ZarnasBooks.Models.csproj" />
+    <ProjectReference Include="..\ZarnasBooks.Utility\ZarnasBooks.Utility.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Areas\Admin\Controllers\" />
   </ItemGroup>
 
 </Project>
