create controller inside the  Admin

--- a/ZarnasBookStore/ZarnasBookStore.csproj
+++ b/ZarnasBookStore/ZarnasBookStore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -21,10 +21,6 @@
     <ProjectReference Include="..\ZarnasBooks.DataAccess\ZarnasBooks.DataAccess.csproj" />
     <ProjectReference Include="..\ZarnasBooks.Models\ZarnasBooks.Models.csproj" />
     <ProjectReference Include="..\ZarnasBooks.Utility\ZarnasBooks.Utility.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
   </ItemGroup>
 
 </Project>
