--- a/ZarnasBooks.DataAccess/ZarnasBooks.DataAccess.csproj
+++ b/ZarnasBooks.DataAccess/ZarnasBooks.DataAccess.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20230413210207_AddCoverTypeToDb.cs" />
+    <Compile Remove="Migrations\20230413210207_AddCoverTypeToDb.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.32" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.32" />
