--- a/ZarnasBookStore/ZarnasBookStore.csproj
+++ b/ZarnasBookStore/ZarnasBookStore.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\ZarnasBooks.Utility\ZarnasBooks.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Views\CoverType\" />
+  </ItemGroup>
+
 </Project>
